Fix z-index issue with sidebar and mega-menu

--- a/css/blocks/sidebar.css
+++ b/css/blocks/sidebar.css
@@ -82,6 +82,7 @@
     position: sticky;
     top: 2rem;
     height: auto;
+    z-index: 1;
   }
 
   .sidebar__close {
